# dtextra

./: Makefile  README
Xlt-13.0.13/: AUTHORS  ChangeLog  MaintainerMode.am  Makefile  Makefile.am  Makefile.in  NEWS  README  ac_find_motif.m4  ac_find_xlt.m4  ac_find_xpm.m4  acinclude.m4  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in  libtool  spec.am
Xlt-13.0.13/doc/: ListTree.html  ListTreeProg.html  LiteClue.html  Makefile  Makefile.am  Makefile.in  SciPlot.html  SciPlotDemo.html  SciPlotProg.html  StrokeInstall.3  StrokeInstall.3.in  Strokes.3  Strokes.3.in  Xlt.3  Xlt.3.in  XltAnimatedButton.3  XltAnimatedButton.3.in  XltAppAddTimeOut.3  XltAppAddTimeOut.3.in  XltAppInitialize.3  XltAppInitialize.3.in  XltAppShell.3  XltAppShell.3.in  XltBubbleButton.3  XltBubbleButton.3.in  XltCheckArgSize.3  XltCheckArgSize.3.in  XltCreateAnimatedButton.3  XltCreateAnimatedButton.3.in  XltCreateBubbleButton.3  XltCreateBubbleButton.3.in  XltCreateFilePicker.3  XltCreateFilePicker.3.in  XltCreateHost.3  XltCreateHost.3.in  XltCreateNumEntry.3  XltCreateNumEntry.3.in  XltDisplayFallbackResources.3  XltDisplayFallbackResources.3.in  XltDisplayOptions.3  (+55 more)
Xlt-13.0.13/lib/: AnimatedButton.c  AnimatedButton.h  AnimatedButtonP.h  AppShell.c  AppShell.h  AppShellP.h  BubbleButton.c  BubbleButton.h  BubbleButtonP.h  DisplayFallbackResources.c  DisplayOptions.c  EntrySB.c  EntrySB.h  EntrySBP.h  FilePicker.c  FilePicker.h  FilePickerP.h  FontChooser.c  FontChooser.h  FontChooserP.h  Host.c  Host.h  HostP.h  HostTranscript.c  ListTree.c  ListTree.h  ListTreeP.h  LiteClue.c  LiteClue.h  LiteClueP.h  Makefile  Makefile.am  Makefile.in  NodeButton.c  NodeButton.h  NodeButtonP.h  NumEntry.c  NumEntry.h  NumEntryP.h  Rdb.c  (+26 more)
Xlt-13.0.13/scripts/: Makefile  Makefile.am  Makefile.in  Xlt.spec  Xlt.spec.in
Xlt-13.0.13/tests/: Makefile  Makefile.am  Makefile.in
Xlt-13.0.13/tests/AnimatedButton/: Makefile  Makefile.am  Makefile.in  test3.c  test4.c
Xlt-13.0.13/tests/AppShell/: Makefile  Makefile.in  test1.c
Xlt-13.0.13/tests/BubbleButton/: Makefile  Makefile.am  Makefile.in  dates.xpm  test1.c  test2.c
Xlt-13.0.13/tests/EntrySB/: Makefile  Makefile.am  Makefile.in  test1.c
Xlt-13.0.13/tests/FilePicker/: Makefile  Makefile.in  test1.c
Xlt-13.0.13/tests/FontChooser/: Makefile  Makefile.am  Makefile.in  test1.c  test2.c
Xlt-13.0.13/tests/Host/: Makefile  Makefile.am  Makefile.in  (+1 more)
meditres/: AUTHORS  ChangeLog  FAQ  Makefile  Makefile.am  Makefile.in  NEWS  README  acconfig.h  aclocal.m4  actions.c  appres.c  bootstrap  comm.c  config.h  config.h.in  config.status  configure  configure.in  editres.c  editresP.h  finddlg.c  geometry.c  handler.c  meditres.h  meditres.html  meditres.spec  meditres.spec.in  motif.c  print.c  setvalues.c  svpopup.c  utils.c  wtree.c
meditres/autom4te.cache/: output.1  requests  traces.0  traces.1
mgv-3.1.5/: .cvsignore  .tag  AUTHORS  Ghostview.c  Ghostview.c.cln  HPUX.Install  MGv  MGv.ad  MGv.ad.in  Makefile  Makefile.am  Makefile.in  NEWS  README  _ad.c  _bld.c  _switch_help.c  acinclude.m4  aclocal.m4  app.c  auto.c  center.c  config.status  configure  configure.cln  configure.in  dsc.c  events.c  file.c  help.c  log.c  magstep.c  main.c  mark.c  media.c  mgv.1  mgv.c  mgv.man  mgv_create.c  options.c  (+15 more)
mgv-3.1.5/autom4te.cache/: output.0  requests  traces.0
mgv-3.1.5/doc/: .cvsignore  Makefile  Makefile.am  Makefile.in  mgv-1.html  mgv-10.html  mgv-11.html  mgv-12.html  mgv-13.html  mgv-14.html  mgv-15.html  mgv-16.html  mgv-17.html  mgv-18.html  mgv-19.html  mgv-2.html  mgv-20.html  mgv-21.html  mgv-22.html  mgv-23.html  mgv-24.html  mgv-25.html  mgv-26.html  mgv-27.html  mgv-28.html  mgv-29.html  mgv-3.html  mgv-30.html  mgv-31.html  mgv-4.html  mgv-5.html  mgv-6.html  mgv-7.html  mgv-8.html  mgv-9.html  mgv.html  mgv.sgml  mgv.sgml-in
mgv-3.1.5/lib/: Makefile  Makefile.am  Makefile.in  icon.xbm  mask.xbm  splash.xbm  splash.xpm
mgv-3.1.5/mine/: Ghostview.h  GhostviewP.h  app.h  auto.h  center.h  dsc.h  events.h  file.h  help.h  log.h  magstep.h  mark.h  media.h  mgv.h  opaque.h  options.h  orientation.h  page.h  page_control.h  print.h  process.h  scroll.h  sens.h  strdefs.h  strings.h  toolbar.h  track.h  uiutil.h  unmangle.h  util.h  view.h  zoom.h
mgv-3.1.5/tools/: ad2c  ad2c.1  ad2c.COPYING  ad2c.README  bld  mkresm4  mkver  mudep  release  sgmlpp  txt2man  txt2swh  yanksect
mgv-3.1.5/wlib/: Makefile  Makefile.am  Makefile.in  WlAppShell.c  WlSplashScreen.c  WlToolBar.c  about.c  appclass.c  callback.c  chkver.c  create.c  dismiss.c  error.c  fgbg.c  find.c  findup.c  focus.c  free_pixmap.c  help-html.c  help-libhelp.c  help.c  icons.c  init.c  log.c  popdown_dialog.c  popup_dialog.c  scrollbar.c  shell.c  strings.c  togglesync.c  top.c  version.c  xbm.c  xpm.c
nebula-0.5/: AUTHORS  ChangeLog  LICENSE  Makefile  Makefile.am  Makefile.in  NEWS  README  config.h  config.h.in  config.status  configure  configure.ac  filesave.c  filesave.h  help.c  help.h  interpreter.c  interpreter.h  main.c  main.h  network.c  network.h  preferences.c  preferences.h  signals.c  signals.h  userlist.c  userlist.h
nebula-0.5/.deps/: filesave.Po  help.Po  interpreter.Po  main.Po  network.Po  preferences.Po  signals.Po  userlist.Po
xps-4.2/: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  PORTING  README  THANKS  TODO  autogen.sh  config.status  configure  configure.ac  makesig.pl  mkinstalldirs  xps.spec  xps.spec.in
xps-4.2/doc/: Makefile  Makefile.am  Makefile.in  xps.pod  xps.pod.in
xps-4.2/intl/: Makefile  Makefile.in
xps-4.2/macros/: Makefile  Makefile.am  Makefile.in  autogen.sh
xps-4.2/src/: Makefile  Makefile.am  Makefile.in  MenuSupport.c  MenuSupport.h  TAGS  Xps.ad  Xps.ad.h  ad2c  askquestion.c  askquestion.h  callback.c  callback.h  common.c  common.h  config.h  config.h.in  dialog.c  dialog.h  getpixelbyname.c  getpixelbyname.h  loadavg.c  loadavg.h  os.c  os.h  postconf.pl  process.c  process.h  sigmap.h  tags  user_config.h  xps.h  xpsplay.c  xpsplay.h  xpstypes.h  xstuff.c  xstuff.h
(+796 files in other folders)
