dnl
dnl This is the configuration file for MEDITRES.
dnl
dnl $Header: /cvsroot-fuse/meditres/meditres/configure.in,v 1.8 2002/01/28 10:35:13 amai Exp $
dnl
dnl Process this file with autoconf to produce a configure script.
dnl
AC_INIT(motif.c)

dnl
dnl Need to be processed with Autoconf >= 2.13
dnl
AC_PREREQ(2.13)

AM_INIT_AUTOMAKE([meditres], [0.1])

dnl
dnl Use of this macro will keep unexpected things from happening if
dnl you're not familiar with automake.
dnl
dnl    if test -z "$enable_maintainer_mode"
dnl    then
dnl        enable_maintainer_mode=yes
dnl    fi
dnl amai: enable later again...
dnl AM_MAINTAINER_MODE

dnl Define available languages
ALL_LINGUAS="en nl fr"

dnl AC_ARG_PROGRAM
AM_CONFIG_HEADER(config.h)

dnl
dnl Find a C compiler, detect strange systems.
dnl The order is important here.
dnl
AC_PROG_CC
AC_AIX
AC_ISC_POSIX
AC_CYGWIN
AC_EXEEXT
dnl AC_PROG_CC_STDC

dnl
dnl Dmalloc is a library to debug memory allocation.
dnl Get it from www.dmalloc.com
dnl
AM_WITH_DMALLOC

dnl
dnl Now at last we can do checks for programs.
dnl
AC_PROG_YACC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_RANLIB

AC_CHECK_PROG(HAVE_TEXI2HTML, texi2html, yes)
AM_CONDITIONAL(HaveTexi2Html, test x$HAVE_TEXI2HTML = xyes)

dnl
dnl Dirty trick
dnl
if test -d /usr/local ; then
	CFLAGS="-I/usr/local/include $CFLAGS "
	INCLUDES="-I/usr/local/include $INCLUDES "
	LIBS="-L/usr/local/lib $LIBS "
fi

dnl
dnl How good is the C compiler ?
dnl
AM_C_PROTOTYPES

dnl
dnl Checks for X11
dnl
AC_PATH_XTRA

dnl
dnl Checks for Motif
AC_FIND_MOTIF
CFLAGS="$MOTIF_CFLAGS $XPM_CFLAGS $X_CFLAGS $CFLAGS"
CPPFLAGS="$MOTIF_CFLAGS"
LIBS="$MOTIF_LIBS $XPM_LIBS $X_LIBS $X_PRE_LIBS -lXt -lXext -lX11 $X_EXTRA_LIBS $LIBS"

dnl Due to the CPPFLAGS set this test should succeed
AC_CHECK_HEADERS(Xm/Container.h)

dnl
dnl Checks for header files.
dnl
AC_HEADER_STDC
AC_CHECK_HEADERS(sys/time.h time.h unistd.h)

dnl
dnl Checks for typedefs, structures, and compiler characteristics.
dnl
AC_C_CONST
AC_TYPE_SIZE_T
AC_HEADER_TIME

dnl
dnl Checks for library functions.
dnl
AC_FUNC_ALLOCA
AC_TYPE_SIGNAL
AC_FUNC_STRFTIME
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(sigaction strcasecmp strerror)
dnl This is a 2.5x call!?
dnl AC_FUNC_MKTIME
AM_FUNC_OBSTACK

AC_SUBST(include_motif)
AC_SUBST(link_motif)

AC_OUTPUT([Makefile meditres.spec])
